<resources>
    <string name="app_name">Converter</string>
    <string name="hint_amount">Amount</string>
    <string name="label_converting_from">What do you want to convert?</string>
    <string name="label_converting_to">Convert to</string>
    <string name="label_button">Do it!</string>
    <string name="how_much">How much?</string>
    <string name="lbl_result">Result:</string>
    <string name="valcurs_loaded_popup">Data loaded</string>
    <string name="valcurs_error_popup">Error loading data!</string>
    <string name="enter_amount">Enter amount!</string>
</resources>
